2002-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e19.el: Require `poe' and `path-util'; attempt to define the
	functions `base64-decode-string' and `base64-encode-string'.

	* w3m-util.el (w3m-display-progress-message): New function.
	* w3m.el (w3m-goto-url-new-session): Use it.
	(w3m): Use it.

2002-10-21  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-goto-url): Process 'about://group/...'.

	* w3m-bookmark.el (w3m-bookmark-add-current-url-group): New function.

2002-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-delete-buffer): Run `w3m-delete-buffer-hook' only
	when a buffer is killed.
	(w3m-pack-buffer-numbers): Arrange buffers sequentially from 1
	instead of 0.
	(w3m-select-buffer-next-line): Update gutter tabs for XEmacs.
	(w3m-select-buffer-delete-buffer): Run `w3m-delete-buffer-hook'.

	* w3m-util.el (w3m-buffer-number): Assume the buffer number has
	begun from 1 instead of 0.
	(w3m-buffer-set-number): Ditto.
	(w3m-buffer-name-lessp): Ditto.

2002-10-19  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m.el (w3m-entity-alist): Support Greek.

2002-10-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-goto-url): Display a help message to stop
	asynchronous process.

2002-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-input-textarea-keymap): Don't bind C-g.
	(w3m-form-input-select-keymap): Ditto.
	(w3m-form-input-map-keymap): Ditto.

	* w3m.el (w3m-select-buffer-mode): Add some key descriptions to
	the doc-string.

2002-10-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* icons/db-history-up.xpm: Add missing comma.

2002-07-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-symbol.el: New file.

	* w3m.el: Autoload "w3m-symbol" for `w3m-replace-symbol'.
	(w3m-use-symbol): New variable.
	(w3m-fontify): Call `w3m-replace-symbol'.

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-symbol.el if no-MULE.

2002-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
