@@ -5767,9 +5767,10 @@ Cannot run two w3m processes simultaneously \
     ;; Store the current position in the history structure.
     (w3m-history-store-position)
     ;; Access url group
-    (if (string-match "\\`about://group/" url)
-	(let ((urls (read (base64-decode-string
-			   (substring url (match-end 0))))))
+    (if (string-match "\\`group:" url)
+	(let ((urls (split-string
+		     (w3m-url-decode-string (substring url (match-end 0)))
+		     "&")))
 	  (w3m-process-do
 	      (type (prog1
 			(w3m-goto-url (car urls))
