@@ -1,3 +1,13 @@
+2002-10-21  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m.el (w3m-goto-url): Use 'group:' scheme instead of
+	'about://group/...';
+	Use url encoding for the member of URL group instead of
+	base64 encoding.
+
+	* w3m-bookmark.el (w3m-bookmark-add-current-url-group): Follow
+	the change above.
+
 2002-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-e19.el: Require `poe' and `path-util'; attempt to define the
